# embedded_logs

./: .gitignore  README.md  papi.txt  pyproject.toml
.github/workflows/: ci.yml
tests/: test_analyze.py  test_parser.py
